--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
 		"react-hook-form": "^7.52.1",
 		"swiper": "^11.1.9",
 		"uuid": "^10.0.0",
-		"zod": "^3.23.8"
+		"zod": "^3.23.8",
+		"zustand": "^4.5.4"
 	},
 	"devDependencies": {
 		"@types/node": "^20",
