--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"@hookform/resolvers": "^3.9.0",
 		"@next/font": "^14.2.5",
 		"@tanstack/react-query": "^5.51.16",
+		"@tanstack/react-table": "^8.19.3",
 		"next": "14.2.5",
 		"react": "^18",
 		"react-dom": "^18",
@@ -25,6 +26,7 @@
 		"@types/node": "^20",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
+		"@types/uuid": "^10.0.0",
 		"eslint": "^8",
 		"eslint-config-next": "14.2.5",
 		"postcss": "^8",
