--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
 	"dependencies": {
 		"@hookform/resolvers": "^3.9.0",
 		"@next/font": "^14.2.5",
+		"@prisma/client": "^5.19.1",
 		"@tanstack/react-query": "^5.51.16",
 		"@tanstack/react-table": "^8.19.3",
 		"next": "14.2.5",
+		"next-auth": "^4.24.7",
+		"prisma": "^5.19.1",
 		"react": "^18",
 		"react-dom": "^18",
 		"react-hook-form": "^7.52.1",
